# MathVis

./: .gitignore  CMakeLists.txt  compile_commands.json  debug.sh  run.sh
src/: defs_panel.cpp  expression.cpp  expression.hpp  main.cpp  parser.cpp  parser.hpp  string_id.hpp  ui.hpp
